Fix overflow on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1096,6 +1096,11 @@ p{
 and (min-device-width : 375px)
 and (max-device-width : 812px)
 and (-webkit-device-pixel-ratio : 3) {
+    body{
+        width:auto;
+        overflow:hidden;
+    }
+
     .brand h1{
         padding-top: 1rem;
         font-size: 2.1rem;
